--- a/ranked-ear/pom.xml
+++ b/ranked-ear/pom.xml
@@ -25,7 +25,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.3.2</version>
         <configuration>
           <source>1.6</source>
           <target>1.6</target>
@@ -39,10 +38,10 @@
           <defaultLibBundleDir>lib</defaultLibBundleDir>
           <generateApplicationXml>true</generateApplicationXml>
           <modules>
-            <module>
-              <groupId>de.holisticon.ranked</groupId>
-              <artifactId>ranked-impl</artifactId>
-            </module>
+            <ejbModule>
+                  <groupId>de.holisticon.ranked</groupId>
+                  <artifactId>ranked-impl</artifactId>
+            </ejbModule>
           </modules>
         </configuration>
       </plugin>
