--- a/ranked-ear/pom.xml
+++ b/ranked-ear/pom.xml
@@ -17,26 +17,16 @@
       <groupId>de.holisticon.ranked</groupId>
       <artifactId>ranked-impl</artifactId>
       <version>1.0-SNAPSHOT</version>
-      <type>jar</type>
+      <type>ejb</type>
     </dependency>
   </dependencies>
   <build>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-ear-plugin</artifactId>
         <configuration>
-          <version>6</version>
           <defaultLibBundleDir>lib</defaultLibBundleDir>
-          <generateApplicationXml>true</generateApplicationXml>
           <modules>
             <ejbModule>
                   <groupId>de.holisticon.ranked</groupId>
