--- a/ranked-ear/pom.xml
+++ b/ranked-ear/pom.xml
@@ -19,6 +19,12 @@
       <version>1.0-SNAPSHOT</version>
       <type>ejb</type>
     </dependency>
+    <dependency>
+      <groupId>de.holisticon.ranked</groupId>
+      <artifactId>ranked-webapp</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <type>war</type>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
@@ -27,11 +33,17 @@
         <artifactId>maven-ear-plugin</artifactId>
         <configuration>
           <defaultLibBundleDir>lib</defaultLibBundleDir>
+          <skinnyWars>true</skinnyWars>
           <modules>
             <ejbModule>
-                  <groupId>de.holisticon.ranked</groupId>
-                  <artifactId>ranked-impl</artifactId>
+              <groupId>de.holisticon.ranked</groupId>
+              <artifactId>ranked-impl</artifactId>
             </ejbModule>
+            <webModule>
+              <groupId>de.holisticon.ranked</groupId>
+              <artifactId>ranked-webapp</artifactId>
+              <contextRoot>/ranked</contextRoot>
+            </webModule>
           </modules>
         </configuration>
       </plugin>
