--- a/ranked-impl/pom.xml
+++ b/ranked-impl/pom.xml
@@ -14,11 +14,14 @@
 
 
   <properties>
-    <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <jbossHome>${project.build}/jboss</jbossHome>
   </properties>
-
   <dependencies>
+    <dependency>
+      <groupId>de.holisticon.ranked</groupId>
+      <artifactId>ranked-api</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
     <dependency>
       <groupId>org.scala-lang</groupId>
       <artifactId>scala-library</artifactId>
@@ -30,10 +33,24 @@
       <type>pom</type>
     </dependency>
     <dependency>
-      <groupId>de.holisticon.ranked</groupId>
-      <artifactId>ranked-api</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <groupId>org.codehaus.jackson</groupId>
+      <artifactId>jackson-jaxrs</artifactId>
+      <version>1.9.12</version>
     </dependency>
+
+
+
+
+
+
+
+    <!-- Test Depencencies -->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>log4j-over-slf4j</artifactId>
+      <scope>test</scope>
+    </dependency>
+
     <dependency>
       <groupId>org.jboss.arquillian.junit</groupId>
       <artifactId>arquillian-junit-container</artifactId>
@@ -45,8 +62,8 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.jboss.arquillian.container</groupId>
-      <artifactId>arquillian-weld-ee-embedded-1.1</artifactId>
+      <groupId>org.jboss.as</groupId>
+      <artifactId>jboss-as-arquillian-container-managed</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -68,8 +85,17 @@
         <artifactId>maven-scala-plugin</artifactId>
         <executions>
           <execution>
+            <id>scala-compile-first</id>
+            <phase>process-resources</phase>
             <goals>
+              <goal>add-source</goal>
               <goal>compile</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>scala-test-compile</id>
+            <phase>process-test-resources</phase>
+            <goals>
               <goal>testCompile</goal>
             </goals>
           </execution>
@@ -82,6 +108,61 @@
         <configuration>
           <ejbVersion>3.1</ejbVersion>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.cargo</groupId>
+        <artifactId>cargo-maven2-plugin</artifactId>
+        <version>1.3.2</version>
+        <configuration>
+          <container>
+            <containerId>jboss71x</containerId>
+           <!-- <artifactInstaller>
+              <groupId>org.jboss.as</groupId>
+              <artifactId>jboss-as-dist</artifactId>
+              <version>7.1.1.Final</version>
+            </artifactInstaller>-->
+          </container>
+        </configuration>
+        <executions>
+          <execution>
+            <id>start-container</id>
+            <phase>pre-integration-test</phase>
+            <goals>
+              <goal>install</goal>
+              <goal>configure</goal>
+              <goal>start</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>stop-container</id>
+            <phase>post-integration-test</phase>
+            <goals>
+              <goal>stop</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <systemProperties>
+            <arquillian.launch>jbossas-managed-7-1</arquillian.launch>
+          </systemProperties>
+          <environmentVariables>
+            <JBOSS_HOME>${project.build.directory}/jboss-as-7.1.1</JBOSS_HOME>
+          </environmentVariables>
+        </configuration>
+        <executions>
+          <execution>
+            <id>run-integration-testss</id>
+            <phase>integration-test</phase>
+            <configuration>
+              <includes>
+                <include>**ITest.java</include>
+              </includes>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
