--- a/ranked-webapp/pom.xml
+++ b/ranked-webapp/pom.xml
@@ -8,31 +8,27 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>ranked-api</artifactId>
-  <name>ranked-api</name>
-  <packaging>jar</packaging>
+  <artifactId>ranked-webapp</artifactId>
+  <name>ranked-webapp</name>
+  <packaging>war</packaging>
 
   <dependencies>
     <dependency>
-      <groupId>org.scala-lang</groupId>
-      <artifactId>scala-library</artifactId>
-      <version>${scala.version}</version>
+      <groupId>de.holisticon.ranked</groupId>
+      <artifactId>ranked-api</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.resteasy</groupId>
+      <artifactId>resteasy-jaxrs</artifactId>
+      <version>2.2.1.GA</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.jboss.spec</groupId>
       <artifactId>jboss-javaee-6.0</artifactId>
       <type>pom</type>
-    </dependency>
-    <dependency>
-      <groupId>org.hibernate</groupId>
-      <artifactId>hibernate-jpamodelgen</artifactId>
-      <version>1.2.0.Final</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.codehaus.jackson</groupId>
-      <artifactId>jackson-core-asl</artifactId>
-      <version>1.9.12</version>
     </dependency>
   </dependencies>
 
@@ -43,17 +39,8 @@
         <artifactId>maven-scala-plugin</artifactId>
         <executions>
           <execution>
-            <id>scala-compile-first</id>
-            <phase>process-resources</phase>
             <goals>
-              <goal>add-source</goal>
               <goal>compile</goal>
-            </goals>
-          </execution>
-          <execution>
-            <id>scala-test-compile</id>
-            <phase>process-test-resources</phase>
-            <goals>
               <goal>testCompile</goal>
             </goals>
           </execution>
