Fixed cargo and arquillian setup

--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,11 @@
         <version>7.1.1.Final</version>
       </dependency>
       <dependency>
+        <groupId>org.jboss.as</groupId>
+        <artifactId>jboss-as-arquillian-container-remote</artifactId>
+        <version>7.1.1.Final</version>
+      </dependency>
+      <dependency>
         <groupId>org.jboss.weld</groupId>
         <artifactId>weld-core</artifactId>
         <version>1.1.5.Final</version>
