--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,7 @@
         <groupId>org.scala-lang</groupId>
         <artifactId>scala-library</artifactId>
         <version>${scala.version}</version>
+        <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>org.jboss.spec</groupId>
@@ -74,6 +75,12 @@
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit-dep</artifactId>
+        <version>4.11</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
         <version>4.11</version>
         <scope>test</scope>
       </dependency>
@@ -105,6 +112,12 @@
         <artifactId>weld-core</artifactId>
         <version>1.1.5.Final</version>
         <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>1.7.2</version>
+        <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>org.slf4j</groupId>
