--- a/ranked-api/pom.xml
+++ b/ranked-api/pom.xml
@@ -30,9 +30,9 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>org.codehaus.jackson</groupId>
-      <artifactId>jackson-core-asl</artifactId>
-      <version>1.9.12</version>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.1.2</version>
     </dependency>
   </dependencies>
 
