Changed license to BSD to be conformant with holisticon oss policy

--- a/pom.xml
+++ b/pom.xml
@@ -28,8 +28,8 @@
 
   <licenses>
     <license>
-      <name>Apache License, Version 2.0</name>
-      <url>http://www.apache.org/licenses/LICENSE-2.0</url>
+      <name>BSD license</name>
+      <url>LICENSE.txt</url>
     </license>
   </licenses>
   <inceptionYear>2013</inceptionYear>
