Added CORS-Filter to jax-rs endpoint. Thanks to thetransactioncompany!

--- a/ranked-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/ranked-webapp/src/main/webapp/WEB-INF/web.xml
@@ -23,10 +23,18 @@
   <servlet>
     <servlet-name>Resteasy</servlet-name>
     <servlet-class>org.jboss.resteasy.plugins.server.servlet.HttpServletDispatcher</servlet-class>
-
   </servlet>
   <servlet-mapping>
     <servlet-name>Resteasy</servlet-name>
     <url-pattern>/*</url-pattern>
   </servlet-mapping>
+
+  <filter>
+    <filter-name>CORS</filter-name>
+    <filter-class>com.thetransactioncompany.cors.CORSFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>CORS</filter-name>
+    <servlet-name>Resteasy</servlet-name>
+  </filter-mapping>
 </web-app>
