--- a/ranked-webapp/pom.xml
+++ b/ranked-webapp/pom.xml
@@ -44,6 +44,12 @@
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.thetransactioncompany</groupId>
+      <artifactId>cors-filter</artifactId>
+      <version>1.3.2</version>
+    </dependency>
+
 
 
     <!-- Test dependencies -->
