moved cargo credentials to settings.xml

--- a/ranked-ear/pom.xml
+++ b/ranked-ear/pom.xml
@@ -61,7 +61,8 @@
           <configuration>
             <type>runtime</type>
             <properties>
-              <cargo.remote.username>deployer</cargo.remote.username>
+              <cargo.remote.username>${jboss.username}</cargo.remote.username>
+              <cargo.remote.password>${jboss.password}</cargo.remote.password>
             </properties>
           </configuration>
           <deployer>
