--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,11 @@
           <artifactId>maven-failsafe-plugin</artifactId>
           <version>2.13</version>
         </plugin>
+        <plugin>
+          <groupId>org.codehaus.cargo</groupId>
+          <artifactId>cargo-maven2-plugin</artifactId>
+          <version>1.3.3</version>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
