--- a/ranked-ear/pom.xml
+++ b/ranked-ear/pom.xml
@@ -48,50 +48,60 @@
           </modules>
         </configuration>
       </plugin>
-      <plugin>
-        <groupId>org.codehaus.cargo</groupId>
-        <artifactId>cargo-maven2-plugin</artifactId>
-        <version>1.3.2</version>
-        <configuration>
-          <container>
-            <containerId>jboss71x</containerId>
-            <type>remote</type>
-            <home>${jbossHome}</home>
-          </container>
-          <configuration>
-            <type>runtime</type>
-            <properties>
-              <cargo.remote.username>${jboss.username}</cargo.remote.username>
-              <cargo.remote.password>${jboss.password}</cargo.remote.password>
-            </properties>
-          </configuration>
-          <deployer>
-            <type>remote</type>
-          </deployer>
-          <deployables>
-            <deployable>
-              <groupId>de.holisticon.ranked</groupId>
-              <artifactId>ranked-ear</artifactId>
-              <type>ear</type>
-            </deployable>
-          </deployables>
-        </configuration>
-        <executions>
-          <execution>
-            <id>deploy</id>
-            <goals>
-              <goal>deployer-redeploy</goal>
-            </goals>
-          </execution>
-        </executions>
-        <dependencies>
-          <dependency>
-            <groupId>org.jboss.as</groupId>
-            <artifactId>jboss-as-controller-client</artifactId>
-            <version>7.2.0.Final</version>
-          </dependency>
-        </dependencies>
-      </plugin>
     </plugins>
   </build>
+
+  <profiles>
+    <profile>
+      <id>deploy-local</id>
+      <build>
+        <plugins>
+          <plugin>
+              <groupId>org.codehaus.cargo</groupId>
+              <artifactId>cargo-maven2-plugin</artifactId>
+              <configuration>
+                <container>
+                  <containerId>jboss71x</containerId>
+                  <type>remote</type>
+                  <home>${jbossHome}</home>
+                </container>
+                <configuration>
+                  <type>runtime</type>
+                  <properties>
+                    <cargo.remote.username>${jboss.username}</cargo.remote.username>
+                    <cargo.remote.password>${jboss.password}</cargo.remote.password>
+                  </properties>
+                </configuration>
+                <deployer>
+                  <type>remote</type>
+                </deployer>
+                <deployables>
+                  <deployable>
+                    <groupId>de.holisticon.ranked</groupId>
+                    <artifactId>ranked-ear</artifactId>
+                    <type>ear</type>
+                  </deployable>
+                </deployables>
+              </configuration>
+              <executions>
+                <execution>
+                  <id>deploy</id>
+                  <goals>
+                    <goal>deployer-redeploy</goal>
+                  </goals>
+                  <phase>install</phase>
+                </execution>
+              </executions>
+              <dependencies>
+                <dependency>
+                  <groupId>org.jboss.as</groupId>
+                  <artifactId>jboss-as-controller-client</artifactId>
+                  <version>7.2.0.Final</version>
+                </dependency>
+              </dependencies>
+            </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
