--- a/ranked-impl/pom.xml
+++ b/ranked-impl/pom.xml
@@ -104,14 +104,14 @@
           <ejbVersion>3.1</ejbVersion>
         </configuration>
       </plugin>
+      <!--
       <plugin>
         <groupId>org.codehaus.cargo</groupId>
         <artifactId>cargo-maven2-plugin</artifactId>
-        <version>1.3.2</version>
         <configuration>
           <container>
             <containerId>jboss71x</containerId>
-            <type>remote</type>
+            <type>installed</type>
             <home>${jbossHome}</home>
           </container>
         </configuration>
@@ -125,6 +125,7 @@
           </execution>
         </executions>
       </plugin>
+      -->
       <plugin>
         <artifactId>maven-failsafe-plugin</artifactId>
         <configuration>
