--- a/ranked-ear/pom.xml
+++ b/ranked-ear/pom.xml
@@ -67,10 +67,10 @@
                 </container>
                 <configuration>
                   <type>runtime</type>
-                  <properties>
+                <!--  <properties>
                     <cargo.remote.username>${jboss.username}</cargo.remote.username>
                     <cargo.remote.password>${jboss.password}</cargo.remote.password>
-                  </properties>
+                  </properties>   -->
                 </configuration>
                 <deployer>
                   <type>remote</type>
