Fixed Cargo configuration for local deployment

--- a/ranked-ear/pom.xml
+++ b/ranked-ear/pom.xml
@@ -16,7 +16,7 @@
     <dependency>
       <groupId>de.holisticon.ranked</groupId>
       <artifactId>ranked-impl</artifactId>
-      <version>${jboss.username}</version>
+      <version>1.0-SNAPSHOT</version>
       <type>ejb</type>
     </dependency>
     <dependency>
