--- a/ranked-webapp/pom.xml
+++ b/ranked-webapp/pom.xml
@@ -44,11 +44,11 @@
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
     </dependency>
-    <dependency>
+    <!--<dependency>
       <groupId>com.thetransactioncompany</groupId>
       <artifactId>cors-filter</artifactId>
       <version>1.3.2</version>
-    </dependency>
+    </dependency>       -->
 
 
 
