--- a/ranked-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/ranked-webapp/src/main/webapp/WEB-INF/web.xml
@@ -29,12 +29,12 @@
     <url-pattern>/*</url-pattern>
   </servlet-mapping>
 
-  <filter>
+ <!-- <filter>
     <filter-name>CORS</filter-name>
     <filter-class>com.thetransactioncompany.cors.CORSFilter</filter-class>
   </filter>
   <filter-mapping>
     <filter-name>CORS</filter-name>
     <servlet-name>Resteasy</servlet-name>
-  </filter-mapping>
+  </filter-mapping>     -->
 </web-app>
