--- a/ranked-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/ranked-webapp/src/main/webapp/WEB-INF/web.xml
@@ -29,9 +29,13 @@
     <url-pattern>/*</url-pattern>
   </servlet-mapping>
 
-<filter>
+  <filter>
     <filter-name>CORS</filter-name>
     <filter-class>com.thetransactioncompany.cors.CORSFilter</filter-class>
+    <init-param>
+      <param-name>cors.supportedMethods</param-name>
+      <param-value>GET, POST, HEAD, PUT, DELETE, OPTIONS</param-value>
+    </init-param>
   </filter>
   <filter-mapping>
     <filter-name>CORS</filter-name>
