--- a/ranked-impl/pom.xml
+++ b/ranked-impl/pom.xml
@@ -47,12 +47,19 @@
     </dependency>
     <dependency>
       <groupId>junit</groupId>
-      <artifactId>junit-dep</artifactId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest-core</artifactId>
+      <version>1.3</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.jboss.as</groupId>
       <artifactId>jboss-as-arquillian-container-remote</artifactId>
+      <version>7.1.1.Final</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -129,12 +136,12 @@
       <plugin>
         <artifactId>maven-failsafe-plugin</artifactId>
         <configuration>
-          <systemProperties>
-            <arquillian.launch>jbossas-managed-7-1</arquillian.launch>
-          </systemProperties>
-          <environmentVariables>
+          <!--<systemProperties>
+            <arquillian.launch>jbossas-remote-7-1</arquillian.launch>
+          </systemProperties>-->
+          <!--<environmentVariables>
             <JBOSS_HOME>${project.build.directory}/jboss-as-7.1.1</JBOSS_HOME>
-          </environmentVariables>
+          </environmentVariables>-->
         </configuration>
         <executions>
           <execution>
