--- a/pom.xml
+++ b/pom.xml
@@ -73,8 +73,8 @@
         <scope>provided</scope>
       </dependency>
       <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit-dep</artifactId>
+        <groupId>org.hamcrest</groupId>
+        <artifactId>hamcest-core</artifactId>
         <version>4.11</version>
         <scope>test</scope>
       </dependency>
