dependency cleanup and removed artifact-versions from ear-modules. scala-reflect has to be provided by the container now

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,12 @@
         <scope>provided</scope>
       </dependency>
       <dependency>
+        <groupId>org.scala-lang</groupId>
+        <artifactId>scala-reflect</artifactId>
+        <version>${scala.version}</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
         <groupId>org.jboss.spec</groupId>
         <artifactId>jboss-javaee-6.0</artifactId>
         <version>1.0.0.Final</version>
