--- a/ranked-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/ranked-webapp/src/main/webapp/WEB-INF/web.xml
@@ -29,6 +29,10 @@
       <param-name>cors.supportedMethods</param-name>
       <param-value>GET, POST, HEAD, PUT, DELETE, OPTIONS</param-value>
     </init-param>
+    <init-param>
+      <param-name>cors.supportedHeaders</param-name>
+      <param-value>Origin, Accept, X-Requested-With</param-value>
+    </init-param>
   </filter>
   <filter-mapping>
     <filter-name>CORS</filter-name>
