--- a/ranked-api/pom.xml
+++ b/ranked-api/pom.xml
@@ -34,6 +34,12 @@
       <artifactId>jackson-databind</artifactId>
       <version>2.1.3</version>
     </dependency>
+    <dependency>
+      <artifactId>junit</artifactId>
+      <groupId>junit</groupId>
+      <version>4.11</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
