first implementation of Team DAO

--- a/ranked-impl/pom.xml
+++ b/ranked-impl/pom.xml
@@ -24,6 +24,12 @@
       <version>${scala.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>4.0.1.Final</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>org.jboss.spec</groupId>
       <artifactId>jboss-javaee-6.0</artifactId>
       <type>pom</type>
