--- a/ranked-command-service/src/main/resources/ValidationMessages.properties
+++ b/ranked-command-service/src/main/resources/ValidationMessages.properties
@@ -1,2 +1,3 @@
 ranked.createMatch.disjunct=A player must only be in one of the teams!
+ranked.matchSet.goals=Goals must be between 0 and 6!
 ranked.team.two.players=A team must have two different players!
