--- a/ranked-command-service/pom.xml
+++ b/ranked-command-service/pom.xml
@@ -38,6 +38,16 @@
       <groupId>cz.jirutka.validator</groupId>
       <artifactId>validator-spring</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger2</artifactId>
+      <version>2.6.1</version>
+    </dependency>
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger-ui</artifactId>
+      <version>2.7.0</version>
+    </dependency>
 
 
     <dependency>
