restcontroller via explicit bean config works

--- a/ranked-command-service/src/main/resources/application.yml
+++ b/ranked-command-service/src/main/resources/application.yml
@@ -11,5 +11,4 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
-    show-sql: true
-
+    show-sql: false
