--- a/model/pom.xml
+++ b/model/pom.xml
@@ -16,5 +16,10 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-validation</artifactId>
     </dependency>
+    <dependency>
+      <groupId>cz.jirutka.validator</groupId>
+      <artifactId>validator-spring</artifactId>
+    </dependency>
+
   </dependencies>
 </project>
