--- a/ranked-command-service/pom.xml
+++ b/ranked-command-service/pom.xml
@@ -39,6 +39,10 @@
       <artifactId>kotlin-logging</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-validation</artifactId>
+    </dependency>
+    <dependency>
       <groupId>cz.jirutka.validator</groupId>
       <artifactId>validator-spring</artifactId>
     </dependency>
@@ -72,6 +76,13 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+        <dependencies>
+          <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>springloaded</artifactId>
+            <version>1.2.8.RELEASE</version>
+          </dependency>
+        </dependencies>
       </plugin>
     </plugins>
   </build>
